Add Activity One

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,121 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/assets_one_bg"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/img_cover"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/assets_one_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <TextView
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_cover" />
+
+    <ImageView
+        android:id="@+id/img_cloud1"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-50dp"
+        android:layout_marginEnd="-80dp"
+        android:src="@drawable/assets_one_cloud"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line1" />
+
+    <ImageView
+        android:id="@+id/img_cloud2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-55dp"
+        android:layout_marginTop="-8dp"
+        android:src="@drawable/assets_one_cloud"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line1" />
+
+    <ImageView
+        android:id="@+id/img_titlemateri1"
+        android:layout_width="250dp"
+        android:layout_height="125dp"
+        android:layout_marginTop="34dp"
+        android:background="@drawable/layout_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line1" />
+
+    <ImageView
+        android:id="@+id/img_titlemateri2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/assets_one_titlemateri"
+        app:layout_constraintBottom_toBottomOf="@+id/img_titlemateri1"
+        app:layout_constraintEnd_toEndOf="@+id/img_titlemateri1"
+        app:layout_constraintStart_toStartOf="@+id/img_titlemateri1"
+        app:layout_constraintTop_toTopOf="@+id/img_titlemateri1" />
+
+    <ImageView
+        android:id="@+id/img_siswa"
+        android:layout_width="60dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/assets_one_siswa"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_titlemateri1"
+        app:layout_constraintVertical_bias="0.44" />
+
+    <ImageView
+        android:id="@+id/img_segitiga"
+        android:layout_width="200dp"
+        android:layout_height="280dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="-70dp"
+        android:background="@drawable/assets_one_segitiga"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_titlemateri1" />
+
+    <ImageView
+        android:id="@+id/tempat_sayuran"
+        android:layout_width="310dp"
+        android:layout_height="310dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="-30dp"
+        android:background="@drawable/assets_one_tempatsayuran"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/img_segitiga"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/img_segitiga" />
+
+    <ImageView
+        android:id="@+id/img_guru"
+        android:layout_width="95dp"
+        android:layout_height="280dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/assets_one_guru"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/img_segitiga"
+        app:layout_constraintVertical_bias="0.86" />
+
+    <ImageView
+        android:id="@+id/img_ayam"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+
+        android:layout_marginBottom="-120dp"
+        android:background="@drawable/assets_one_ayam"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/img_guru"
+        app:layout_constraintTop_toBottomOf="@+id/img_segitiga" />
 </androidx.constraintlayout.widget.ConstraintLayout>
