Add Activity Two (Second Cover Book - GrayScale)

--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/assets_one_bg"
-    tools:context=".MainActivity">
+    android:background="@drawable/assets_two_bg"
+    tools:context=".TwoActivity">
 
     <ImageView
         android:id="@+id/img_cover"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:src="@drawable/assets_one_title"
+        android:src="@drawable/assets_two_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-50dp"
         android:layout_marginEnd="-80dp"
-        android:src="@drawable/assets_one_cloud"
+        android:src="@drawable/assets_two_cloud"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line1" />
 
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="-55dp"
         android:layout_marginTop="-8dp"
-        android:src="@drawable/assets_one_cloud"
+        android:src="@drawable/assets_two_cloud"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line1" />
 
@@ -61,7 +61,7 @@
         android:id="@+id/img_titlemateri2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/assets_one_titlemateri"
+        android:background="@drawable/assets_two_titlemateri"
         app:layout_constraintBottom_toBottomOf="@+id/img_titlemateri1"
         app:layout_constraintEnd_toEndOf="@+id/img_titlemateri1"
         app:layout_constraintStart_toStartOf="@+id/img_titlemateri1"
@@ -72,7 +72,7 @@
         android:layout_width="60dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/assets_one_siswa"
+        android:background="@drawable/assets_two_siswa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_titlemateri1"
@@ -84,7 +84,7 @@
         android:layout_height="280dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="-70dp"
-        android:background="@drawable/assets_one_segitiga"
+        android:background="@drawable/assets_two_segitiga"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_titlemateri1" />
 
@@ -94,7 +94,7 @@
         android:layout_height="310dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="-30dp"
-        android:background="@drawable/assets_one_tempatsayuran"
+        android:background="@drawable/assets_two_tempatsayuran"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_segitiga"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +105,7 @@
         android:layout_width="95dp"
         android:layout_height="280dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/assets_one_guru"
+        android:background="@drawable/assets_two_guru"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img_segitiga"
@@ -116,7 +116,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginBottom="-120dp"
-        android:background="@drawable/assets_one_ayam"
+        android:background="@drawable/assets_two_ayam"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_guru"
         app:layout_constraintTop_toBottomOf="@+id/img_segitiga" />
