Add Activity Five

--- a/app/src/main/res/layout/activity_five.xml
+++ b/app/src/main/res/layout/activity_five.xml
@@ -1,9 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B6D5F0"
     tools:context=".FiveActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/tv_title"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/assets_five_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btn_cp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/assets_five_btn_cp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            android:focusable="true" />
+
+        <ImageView
+            android:id="@+id/btn_tp"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_tp"
+            app:layout_constraintEnd_toEndOf="@+id/btn_cp"
+            app:layout_constraintStart_toStartOf="@+id/btn_cp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_cp" />
+
+        <ImageView
+            android:id="@+id/btn_mke"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_mke"
+            app:layout_constraintEnd_toEndOf="@+id/btn_tp"
+            app:layout_constraintStart_toStartOf="@+id/btn_tp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_tp" />
+
+        <ImageView
+            android:id="@+id/btn_mek"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_mek"
+            app:layout_constraintEnd_toEndOf="@+id/btn_mke"
+            app:layout_constraintStart_toStartOf="@+id/btn_mke"
+            app:layout_constraintTop_toBottomOf="@+id/btn_mke" />
+
+        <ImageView
+            android:id="@+id/btn_lr"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_lr"
+            app:layout_constraintEnd_toEndOf="@+id/btn_mek"
+            app:layout_constraintStart_toStartOf="@+id/btn_mek"
+            app:layout_constraintTop_toBottomOf="@id/btn_mek" />
+
+        <ImageView
+            android:id="@+id/btn_eval"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_eval"
+            app:layout_constraintEnd_toEndOf="@+id/btn_lr"
+            app:layout_constraintStart_toStartOf="@+id/btn_lr"
+            app:layout_constraintTop_toBottomOf="@+id/btn_lr" />
+
+        <ImageView
+            android:id="@+id/btn_kunjaw"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_kunjaw"
+            app:layout_constraintEnd_toEndOf="@+id/btn_eval"
+            app:layout_constraintStart_toStartOf="@+id/btn_eval"
+            app:layout_constraintTop_toBottomOf="@+id/btn_eval" />
+
+        <ImageView
+            android:id="@+id/img_ayam"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="-20dp"
+            android:layout_marginBottom="-100dp"
+            android:background="@drawable/assets_one_ayam"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_dapus" />
+
+        <ImageView
+            android:id="@+id/btn_dapus"
+            android:layout_width="360dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="2dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/assets_five_dapus"
+            app:layout_constraintEnd_toEndOf="@+id/btn_kunjaw"
+            app:layout_constraintStart_toStartOf="@+id/btn_kunjaw"
+            app:layout_constraintTop_toBottomOf="@+id/btn_kunjaw" />
+
+
+
+        <ImageView
+            android:id="@+id/btn_prev"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/assets_btn_nextprev_green"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
