--- a/app/src/main/res/layout/activity_six.xml
+++ b/app/src/main/res/layout/activity_six.xml
@@ -9,16 +9,10 @@
 
     <TextView
         android:id="@+id/tv_title"
+        style="@style/TextTitleCupCakes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/cupcakes"
         android:text="@string/capaian_pembelajaran"
-        android:textColor="#000000"
-        android:textSize="36sp"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
