--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,10 +115,19 @@
         android:id="@+id/img_ayam"
         android:layout_width="150dp"
         android:layout_height="150dp"
-
         android:layout_marginBottom="-120dp"
         android:background="@drawable/assets_one_ayam"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_guru"
         app:layout_constraintTop_toBottomOf="@+id/img_segitiga" />
+    <ImageView
+        android:id="@+id/btn_next"
+        android:background="@drawable/button"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/assets_btn_nextprev"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
