--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,12 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="TextStyleSingle">
+        <item name="android:fontFamily">@font/single</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="TextTitleCupCakes">
         <item name="android:fontFamily">@font/cupcakes</item>
         <item name="android:layout_marginStart">16sp</item>
@@ -36,7 +42,7 @@
         <item name="android:layout_marginTop">48dp</item>
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">36sp</item>
+        <item name="android:textSize">45sp</item>
         <item name="android:gravity">center</item>
     </style>
 </resources>
