--- a/app/src/main/res/layout/activity_five.xml
+++ b/app/src/main/res/layout/activity_five.xml
@@ -149,6 +149,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/assets_btn_nextprev_green"
+            android:background="@drawable/button_prev_green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
