--- a/app/src/main/res/layout/activity_seven.xml
+++ b/app/src/main/res/layout/activity_seven.xml
@@ -210,6 +210,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/assets_btn_menu"
+            android:background="@drawable/button_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/content_eight" />
