--- a/app/src/main/res/layout/activity_six.xml
+++ b/app/src/main/res/layout/activity_six.xml
@@ -55,6 +55,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/assets_btn_menu"
+        android:background="@drawable/button_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
