--- a/app/src/main/res/layout/activity_twelve.xml
+++ b/app/src/main/res/layout/activity_twelve.xml
@@ -8,7 +8,7 @@
     tools:context=".TwelveActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/btn_prod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
@@ -23,7 +23,7 @@
         android:layout_height="190dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/btn_prod"
         app:srcCompat="@drawable/assets_ten_distribusi" />
 
     <ImageView
@@ -74,8 +74,8 @@
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="126dp"
-        android:layout_height="77dp"
+        android:layout_width="160dp"
+        android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,8 +84,8 @@
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="126dp"
-        android:layout_height="77dp"
+        android:layout_width="160dp"
+        android:layout_height="100dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView10"
         app:layout_constraintStart_toEndOf="@+id/imageView10"
@@ -131,7 +131,7 @@
     <androidx.constraintlayout.helper.widget.Flow
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="56dp"
         android:orientation="horizontal"
         app:constraint_referenced_ids="imageView10,imageView11"
         app:flow_horizontalAlign="center"
