--- a/app/src/main/res/layout/activity_eleven.xml
+++ b/app/src/main/res/layout/activity_eleven.xml
@@ -8,7 +8,7 @@
     tools:context=".ElevenActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/btn_prod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
         android:layout_height="190dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/btn_prod"
         app:srcCompat="@drawable/assets_ten_sawah" />
 
     <ImageView
