--- a/app/src/main/res/layout/activity_ten.xml
+++ b/app/src/main/res/layout/activity_ten.xml
@@ -45,12 +45,13 @@
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/TextStyleSingle"
         android:layout_width="267dp"
         android:layout_height="109dp"
         android:layout_marginTop="18dp"
         android:text="Ada beberapa macam kegiatan ekonomi yang dilakukan dan sering kita temui di masyarakat. Kegiatan ekonomi itu seperti produksi, distribusi, dan juga konsumsi. Untuk mengetahui lebih jelas, kamu bisa klik masing-masing gambar dari jenis kegiatan ekonomi di bawah ini!"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -60,6 +61,11 @@
         android:id="@+id/btn_distri"
         android:layout_width="190dp"
         android:layout_height="160dp"
+        style="?android:borderlessButtonStyle"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:elevation="5dp"
+        android:longClickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/btn_prod"
         app:layout_constraintStart_toEndOf="@+id/btn_prod"
         app:layout_constraintTop_toTopOf="@+id/btn_prod"
@@ -70,6 +76,11 @@
         android:layout_width="190dp"
         android:layout_height="160dp"
         android:layout_marginTop="8dp"
+        style="?android:borderlessButtonStyle"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:elevation="5dp"
+        android:longClickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_distri"
@@ -79,6 +90,11 @@
         android:id="@+id/btn_prod"
         android:layout_width="190dp"
         android:layout_height="160dp"
+        style="?android:borderlessButtonStyle"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:elevation="5dp"
+        android:longClickable="true"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@drawable/assets_ten_sawah" />
 
@@ -86,10 +102,22 @@
         android:id="@+id/btn_prev"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button"
         android:rotation="180"
+        android:src="@drawable/assets_btn_nextprev"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_next" />
+
+    <ImageView
+        android:id="@+id/btn_next"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button"
         android:src="@drawable/assets_btn_nextprev"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
