--- a/app/src/main/res/layout/activity_fifteen.xml
+++ b/app/src/main/res/layout/activity_fifteen.xml
@@ -22,13 +22,29 @@
 
     <ImageView
         android:id="@+id/imageView13"
-        android:layout_width="380dp"
+        android:layout_width="350dp"
         android:layout_height="300dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/assets_fifteen_board"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:srcCompat="@drawable/assets_fifteen_board" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/youtubePlayer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView13"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView13" />
 
     <ImageView
         android:id="@+id/imageView14"
@@ -37,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView13"
         app:layout_constraintStart_toStartOf="@+id/imageView13"
         app:layout_constraintTop_toBottomOf="@+id/imageView13"
-        app:srcCompat="@drawable/aseets_fifteen_bgtext" />
+        android:src="@drawable/aseets_fifteen_bgtext" />
 
     <TextView
         android:id="@+id/textView10"
