--- a/app/src/main/res/layout/activity_eleven.xml
+++ b/app/src/main/res/layout/activity_eleven.xml
@@ -27,9 +27,11 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="110dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -50,9 +52,11 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="360dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="27dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
         android:text="Produksi merupakan kegiatan untuk menghasilkan suatu barang atau jasa. Pelaku dari kegiatan produksi disebut sebagai produsen. Tujuan dari produksi adalah guna memenuhi kebutuhan para pembeli atau konsumen dan mencari keuntungan dalam menghasilkan barang dan jasa."
         android:textAlignment="center"
         android:textColor="#000000"
