--- a/app/src/main/res/layout/activity_thirteen.xml
+++ b/app/src/main/res/layout/activity_thirteen.xml
@@ -27,9 +27,11 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="110dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -50,9 +52,11 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="360dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="27dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
         android:text="Konsumsi adalah kegiatan ekonomi yang menghabiskan nilai guna suatu barang atau jasa secara berangsur-angsur atau langsung habis. Pelaku dari kegiatan konsumsi disebut konsumen. Kegiatan konsumsi bertujuan untuk memenuhi kebutuhan manusia sehari-hari."
         android:textAlignment="center"
         android:textColor="#000000"
