--- a/app/src/main/res/layout/activity_twelve.xml
+++ b/app/src/main/res/layout/activity_twelve.xml
@@ -28,9 +28,11 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="110dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -51,9 +53,11 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="360dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="27dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
         android:text="Distribusi merupakan kegiatan menyalurkan barang atau jasa dari pihak produsen kepada pihak konsumen. Orang yang melakukan distribusi disebut distributor. Tugas dari kegiatan distribusi yaitu membeli barang-barang dari pihak produsen untuk kemudian dijual kepada pihak konsumen."
         android:textAlignment="center"
         android:textColor="#000000"
